ci: add json-server

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "json-server": "json-server --watch __json__server_mock__/db.json"
   },
   "eslintConfig": {
     "extends": [
@@ -47,10 +48,11 @@
     "@commitlint/config-conventional": "^13.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
+    "json-server": "^0.16.3",
     "lint-staged": "^11.1.2",
     "prettier": "2.4.1"
   },
-  "husky":{
+  "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
