--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.9",
     "antd": "^4.16.13",
     "craco-less": "^1.20.0",
+    "dayjs": "^1.10.7",
     "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.1",
     "react": "^17.0.2",
